--- a/install_dependencies.yaml
+++ b/install_dependencies.yaml
@@ -3,6 +3,8 @@
   hosts : localhost 
   connection : local
   become : yes 
+  vars:
+    ansible_become_password : jenkins123
   tasks :
     - name : Install Packages 
       pip : 
